trunk/Archive2/75/23450bec448cd3/output
main.cpp:115:5: error: static_assert failed "Invalid container type"
    static_assert(Concepts<HasBegin(ContainerType), HasEnd(ContainerType), HasSize(ContainerType), HasValueType(ContainerType)>
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:141:10: note: in instantiation of function template specialization 'sort<B>' requested here
    B b; sort(b);
         ^
1 error generated.
